添加zuul网关和eureka-client示例。

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>zuul-gateway</module>
+        <module>eureka-client-demo</module>
+    </modules>
+
+    <parent>
+        <groupId>com.hjg.spring</groupId>
+        <artifactId>cka-build</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.hjg.cloud</groupId>
     <artifactId>spring-cloud-demo</artifactId>
@@ -12,5 +23,12 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.hjg.plain</groupId>
+            <artifactId>demo-common-utils</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
