--- a/eureka-client-provider/pom.xml
+++ b/eureka-client-provider/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eureka-client-demo</artifactId>
+    <artifactId>eureka-client-provider</artifactId>
 
     <dependencies>
         <dependency>
