--- a/eureka-client-provider/src/main/resources/bootstrap.yml
+++ b/eureka-client-provider/src/main/resources/bootstrap.yml
@@ -1,18 +1,17 @@
 spring:
   profiles:
     active: dev
-  system:
-    name: cloud-demo
   application:
-    name: eureka-client
+    name: provider
 
 eureka:
   client:
     serviceUrl:
       # --以程序启动参数方式传入
       #defaultZone:  http://eureka-server-1:8761/eureka/,http://eureka-server-2:8761/eureka/
-      defaultZone: http://10.153.61.38:8735/eureka/,http://10.153.61.38:8569/eureka/
-      #defaultZone: http://192.168.1.100:8761/eureka/
+      #defaultZone: http://10.153.61.38:8735/eureka/,http://10.153.61.38:8569/eureka/
+      #defaultZone: http://eureka.didispace.com/eureka/
+      defaultZone: http://localhost:8088/eureka/
   instance:
     #使用IP注册服务
     prefer-ip-address: true
