--- a/eureka-client-provider/src/main/resources/bootstrap.yml
+++ b/eureka-client-provider/src/main/resources/bootstrap.yml
@@ -23,3 +23,5 @@ eureka:
     lease-renewal-interval-in-seconds: 5
     #表示eureka server收到client的心跳之后，在这个时间内若没收到下一次心跳，则将移除该服务。
     lease-expiration-duration-in-seconds: 10
+    metadata-map:
+      company-name: Apple
