--- a/eureka-server-demo/src/main/resources/application-dev.yml
+++ b/eureka-server-demo/src/main/resources/application-dev.yml
@@ -10,3 +10,5 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  server:
+    enable-self-preservation: false
