--- a/eureka-server-demo/src/main/resources/application-dev.yml
+++ b/eureka-server-demo/src/main/resources/application-dev.yml
@@ -9,6 +9,7 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      # defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://127.0.0.1:${server.port}/eureka/
   server:
     enable-self-preservation: false
