--- a/gateway/src/main/resources/application-dev.yml
+++ b/gateway/src/main/resources/application-dev.yml
@@ -1,2 +1,24 @@
 server:
   port: 8001
+
+spring:
+  cloud:
+    gateway:
+      enabled: true
+      discovery:
+        locator:
+          # 开启从注册中心动态创建路由的功能，利用微服务名进行路由
+          enabled: true
+          # 忽略大小写匹配，默认为 false
+          lower-case-service-id: true
+      routes:
+        - id: book-service-route
+          order: 0
+          uri: lb://library
+          predicates:
+            - Path=/api/books/**
+        - id: author-service-route
+          order: 1
+          uri: lb://library
+          predicates:
+            - Path=/api/authors/**
