--- a/zuul-gateway/src/main/resources/bootstrap.yml
+++ b/zuul-gateway/src/main/resources/bootstrap.yml
@@ -11,7 +11,7 @@ eureka:
     serviceUrl:
       # --以程序启动参数方式传入
       #defaultZone:  http://eureka-server-1:8761/eureka/,http://eureka-server-2:8761/eureka/
-      defaultZone: http://10.153.61.38:8735/eureka/,http://10.153.61.38:8569/eureka/
+      defaultZone: http://admin:admin@39.99.176.204:8761/eureka/
       #defaultZone: http://192.168.1.100:8761/eureka/
   instance:
     #使用IP注册服务
